[package]
name = "rusty-vjoy"
version = "1.0.0"
build = "build.rs"
authors = ["SionoiS <SionoiS@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "*"

[dependencies]
hidapi = "1.2"